[project]
name = "zekrom"
version = "0.1.0"
description = "zekrom - a hrrr-grib2 data ingestion tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.3",
    "duckdb>=1.2.2",
    "eccodes>=2.41.0",
    "scikit-learn>=1.6.1",
]

[project.scripts]
zekrom = "core.cli:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
